--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@ th{
   text-align: left;
   font-size: x-large;
 }
+input{
+  font-size: x-large;
+  width: 100%;
+  padding: 0.2rem;
+  border-radius: 0.5;
+}
